kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudcanvas-service
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  selector:
    app: cloudcanvas
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
