kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcanvas-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: cloudcanvas-certificate
spec:
  defaultBackend:
    service:
      name: cloudcanvas-service
      port:
        number: 80
